# craftnet

./: .gitignore  Anchor.toml  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  fix_app.py
.claude/: audit-gaps.md
.github/workflows/: ci.yml  docker.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
apps/desktop/resources/: com.craftnet.daemon.plist
apps/desktop/scripts/: before-build.js  notarize.js
apps/desktop/src/main/: daemon.ts  index.ts  ipc.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.tsx  index.html
apps/desktop/src/renderer/components/: ConnectButton.css  ConnectButton.tsx  CreditPanel.css  CreditPanel.tsx  ExitNodePanel.css  ExitNodePanel.tsx  KeyManagementModal.tsx  ModeSelector.css  ModeSelector.tsx  PrivacyLevelSelector.css  PrivacyLevelSelector.tsx  RequestPanel.css  RequestPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  StatsPanel.css  StatsPanel.tsx  StatusCard.css  StatusCard.tsx  TitleBar.css  TitleBar.tsx
apps/desktop/src/renderer/context/: VPNContext.tsx
apps/desktop/src/renderer/styles/: App.css  global.css
apps/mobile/: app.json  design-preview.html  package-lock.json  package.json  tsconfig.json
apps/mobile/android/: build-rust.sh  gradle.properties  settings.gradle
apps/mobile/android/app/: build.gradle  proguard-rules.pro
apps/mobile/ios/: .xcode.env.local  Podfile  build-rust.sh
apps/mobile/ios/CraftNet/: AppDelegate.mm  CraftNet-Bridging-Header.h  CraftNet.entitlements  Info.plist  LaunchScreen.storyboard
apps/mobile/ios/CraftNet.xcodeproj/: project.pbxproj
apps/mobile/ios/CraftNet/CraftNet/: CraftNet.entitlements
apps/mobile/ios/CraftNet/CraftNetVPN/: CraftNetVPN.entitlements  Info.plist  PacketTunnelProvider.swift
apps/mobile/ios/CraftNet/NativeModules/: CraftNetDaemonModule.m  CraftNetDaemonModule.swift  CraftNetVPNModule.m  CraftNetVPNModule.swift  (+1 more)
apps/mobile/ios/CraftNetCore/: Package.swift
apps/mobile/ios/CraftNetVPN/: CraftNetVPN.entitlements  Info.plist
apps/mobile/ios/TunnelCraft/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  TunnelCraft-Bridging-Header.h
apps/mobile/ios/TunnelCraft.xcodeproj/: project.pbxproj
apps/mobile/ios/TunnelCraft.xcworkspace/: contents.xcworkspacedata
apps/mobile/ios/TunnelCraftCore/: Package.swift
apps/mobile/src/: App.tsx
apps/mobile/src/components/: CollapsibleSection.tsx  ConnectButton.tsx  ConnectionOrb.tsx  ExitNodeSection.tsx  ExitScoreGauge.tsx  ModeSelector.tsx  PrivacyLevelPicker.tsx  PrivacySelector.tsx  RegionSelector.tsx  StatsCard.tsx  StatsCards.tsx  StatusIndicator.tsx  index.ts
apps/mobile/src/config/: settlement.ts
apps/mobile/src/context/: NativeTunnelContext.tsx  TunnelContext.tsx  VPNContext.tsx  index.ts
apps/mobile/src/native/: CraftNetVPN.ts  TunnelCraftVPN.ts
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: HomeScreen.tsx  RequestScreen.tsx  SettingsScreen.tsx
apps/mobile/src/services/: DaemonService.ts
apps/mobile/src/theme/: colors.ts  index.ts  typography.ts
crates/aggregator/: Cargo.toml
crates/aggregator/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: builder.rs  features.rs  layers.rs  lib.rs  matrix.rs
crates/client/: Cargo.toml
crates/client/src/: credits.rs  lib.rs  node.rs  packet.rs  path.rs  request.rs  response.rs  sdk.rs  session.rs  shard_builder.rs  socks5.rs  tunnel.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  geo.rs  lease_set.rs  lib.rs  onion.rs  onion_crypto.rs  receipt_crypto.rs  shard.rs  tunnel.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encrypt.rs  keys.rs  lib.rs  onion.rs  sign.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ipc.rs  lib.rs  main.rs  node.rs  service.rs  windows_pipe.rs
crates/distribution-guest/: Cargo.toml
crates/distribution-guest-types/: Cargo.toml
crates/distribution-guest-types/src/: lib.rs
crates/distribution-guest/src/: main.rs
crates/erasure/: Cargo.toml
crates/erasure/src/: chunker.rs  lib.rs
crates/exit/: Cargo.toml
crates/exit/src/: handler.rs  lib.rs  request.rs  response.rs  tunnel_handler.rs
crates/ipc-client/: Cargo.toml
crates/ipc-client/src/: client.rs  lib.rs  protocol.rs
crates/keystore/: Cargo.toml
crates/keystore/src/: keypair.rs  lib.rs  paths.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  bootstrap.rs  lib.rs  node.rs  proof_message.rs  protocol.rs  relay_status.rs  status.rs  stream_manager.rs  subscription.rs  topology.rs
crates/network/tests/: shard_exchange.rs
crates/prover/: Cargo.toml  build.rs
crates/prover-guest/: Cargo.toml
crates/prover-guest-types/: Cargo.toml
crates/prover-guest-types/src/: lib.rs
crates/prover-guest/src/: main.rs
crates/prover/examples/: vkey_hash.rs
crates/prover/src/: compressor.rs  distribution.rs  lib.rs  merkle.rs  risc0.rs  sp1.rs  stub.rs  traits.rs
crates/relay/: Cargo.toml
crates/relay/src/: cache.rs  handler.rs  lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: config.rs  lib.rs
crates/settlement/: Cargo.toml
crates/settlement/examples/: bench_credits.rs
crates/settlement/src/: client.rs  lib.rs  light.rs  types.rs
crates/uniffi/: Cargo.toml
crates/uniffi/src/: lib.rs
docs/: APP_FEATURE_ASSESSMENT.md  ARCHITECTURE_APPLICATIONS.md  DESIGN.md  IMPLEMENTATION.md  IMPLEMENTATION_PROGRESS.md  STATUS.md  TECHNICAL.md
programs/craftnet-settlement/: Cargo.toml
programs/craftnet-settlement/src/: lib.rs
programs/tunnelcraft-settlement/: Cargo.toml
programs/tunnelcraft-settlement/src/: lib.rs
scripts/: deploy.sh  docker-integration-test.sh  test-two-nodes.sh
tests/: Cargo.toml  devnet_settlement.rs  e2e_tunnel.rs  full_tunnel_simulation.rs  proof_pipeline.rs  shard_flow.rs  ten_node_network.rs  ten_relay_settlement.rs
(+115 files in other folders)
