[package]
name = "craftnet-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
craftnet-core = { workspace = true }
craftec-crypto = { workspace = true }
craftnet-erasure = { workspace = true }
craftnet-network = { workspace = true }
craftnet-relay = { workspace = true }
craftnet-exit = { workspace = true }
craftnet-client = { workspace = true }
craftnet-settlement = { workspace = true }
craftnet-aggregator = { workspace = true }
craftnet-prover = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
hyper = { version = "1.0", features = ["full"] }
rand = "0.8"
futures = "0.3"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p = { workspace = true }
hex = "0.4"
anyhow = "1.0"
bs58 = { workspace = true }
solana-sdk = "2.1"
solana-client = "2.1"
solana-system-interface = "1.0"

[features]
default = []
sp1 = ["craftnet-client/sp1", "craftnet-prover/sp1"]

[[test]]
name = "shard_flow"
path = "shard_flow.rs"

[[test]]
name = "full_tunnel_simulation"
path = "full_tunnel_simulation.rs"

[[test]]
name = "e2e_tunnel"
path = "e2e_tunnel.rs"

[[test]]
name = "ten_relay_settlement"
path = "ten_relay_settlement.rs"

[[test]]
name = "proof_pipeline"
path = "proof_pipeline.rs"

[[test]]
name = "ten_node_network"
path = "ten_node_network.rs"

[[test]]
name = "devnet_settlement"
path = "devnet_settlement.rs"
