[package]
name = "craftnet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "craftnet"
path = "src/main.rs"

[dependencies]
craftec-app = { workspace = true }
craftnet-client = { workspace = true }
craftnet-core = { workspace = true }
craftnet-daemon = { workspace = true }
craftnet-network = { workspace = true }
craftec-keystore = { workspace = true }
craftnet-ipc-client = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
