[package]
name = "craftnet-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftnet-core = { workspace = true }
craftnet-network = { workspace = true }
craftnet-settlement = { workspace = true }
craftnet-prover = { workspace = true }
craftec-crypto = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
