[package]
name = "tunnelcraft-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["frontend", "integration", "backend"]

# Layer features (hierarchical - frontend includes integration, integration includes backend)
frontend = ["integration"]
integration = ["backend"]
backend = []

# Backend features
network = []
relay = []
exit = []
settlement = []

# Integration features
ipc = []
daemon = []

# Frontend features
desktop = []
mobile = []
cli = []

[dependencies]
tunnelcraft-logging = { path = "../logging" }
tunnelcraft-keystore = { path = "../keystore" }
tunnelcraft-settings = { path = "../settings" }
thiserror = { workspace = true }
tracing = { workspace = true }
