[package]
name = "craftnet-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
sp1 = ["craftnet-prover/sp1"]

[dependencies]
craftnet-core = { workspace = true }
craftec-crypto = { workspace = true }
craftnet-erasure = { workspace = true }
craftnet-network = { workspace = true }
craftec-network = { workspace = true }
craftnet-relay = { workspace = true }
craftnet-exit = { workspace = true }
craftnet-settlement = { workspace = true }
craftnet-prover = { workspace = true }
craftnet-aggregator = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
