[package]
name = "tunnelcraft-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
