[package]
name = "tunnelcraft-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tunnelcraft-core = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
