[package]
name = "craftnet-exit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftnet-core = { workspace = true }
craftec-crypto = { workspace = true }
craftnet-erasure = { workspace = true }
craftnet-settlement = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
