[package]
name = "tunnelcraft-keystore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libp2p = { workspace = true }
tunnelcraft-crypto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
