[package]
name = "craftnet-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftnet-core = { workspace = true }
craftec-crypto = { workspace = true }
craftec-network = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
libp2p-stream = { workspace = true }
futures = "0.3"
async-trait = "0.1"
