[package]
name = "tunnelcraft-prover-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
tunnelcraft-prover-guest-types = { path = "../prover-guest-types" }
risc0-zkvm = { version = "3.0", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
