[package]
name = "tunnelcraft-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
sp1 = ["dep:sp1-sdk", "dep:bincode", "dep:tunnelcraft-prover-guest-types", "dep:tunnelcraft-distribution-guest-types", "dep:sp1-build", "dep:hex"]

[dependencies]
tunnelcraft-core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# sp1 dependencies (optional, behind feature flag)
sp1-sdk = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
tunnelcraft-prover-guest-types = { workspace = true, optional = true }
tunnelcraft-distribution-guest-types = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
tunnelcraft-crypto = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true, optional = true }
