[package]
name = "craftnet-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
sp1 = ["dep:sp1-sdk", "dep:bincode", "dep:craftnet-prover-guest-types", "dep:craftnet-distribution-guest-types", "dep:sp1-build", "dep:hex"]

[dependencies]
craftnet-core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# sp1 dependencies (optional, behind feature flag)
sp1-sdk = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
craftnet-prover-guest-types = { workspace = true, optional = true }
craftnet-distribution-guest-types = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
craftec-crypto = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true, optional = true }
