[package]
name = "craftnet-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftnet-core = { workspace = true }
craftec-crypto = { workspace = true }
craftnet-settlement = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
