[package]
name = "tunnelcraft-settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tunnelcraft-keystore = { path = "../keystore" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
