[package]
name = "craftnet-uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "craftnet_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/generate_bindings.rs"

[dependencies]
craftnet-core = { workspace = true }
craftnet-client = { workspace = true }
craftec-crypto = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uniffi = { version = "0.28", features = ["cli"] }
once_cell = "1.19"
parking_lot = "0.12"
hex = { workspace = true }
